--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx,vue}",
+    "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,vue}",
+    "format": "yarn run lint:fix && prettier --write src/**/*.{js,jsx,ts,tsx,vue}"
   },
   "dependencies": {
     "@babel/core": "^7.20.2",
     "@mdi/font": "7.0.96",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "depcheck": "^1.4.3",
+    "firebase": "^9.14.0",
     "firebase-tools": "^11.16.1",
     "roboto-fontface": "*",
     "vue": "^3.2.38",
@@ -19,10 +26,15 @@
   },
   "devDependencies": {
     "@babel/types": "^7.20.2",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/node": "^18.11.9",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^3.0.3",
-    "typescript": "^4.0.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-vue": "^9.8.0",
+    "prettier": "^2.8.0",
+    "typescript": "^4.9.3",
     "vite": "^3.0.9",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vue-tsc": "^1.0.9"
