remove multi word component name rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,5 @@
     "extraFileExtensions": [".vue"]
   },
   "env": { "browser": true, "node": true, "es2021": true },
-  "rules": {}
+  "rules": { "vue/multi-word-component-names": 0 }
 }
