--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "depcheck": "^1.4.3",
     "firebase": "^9.14.0",
     "firebase-tools": "^12.4.0",
+    "nanoid": "^4.0.2",
     "pinia": "^2.0.27",
     "roboto-fontface": "*",
     "vue": "^3.2.38",
