--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/font": "7.0.96",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "@vue/compiler-sfc": "^3.3.4",
     "depcheck": "^1.4.3",
     "firebase": "^9.14.0",
     "firebase-tools": "^12.4.0",
