--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "vinsanet-trpg"
-  }
+    "prod": "vinsanet-trpg",
+    "staging": "vinsanet-trpg-staging"
+  },
+  "targets": {},
+  "etags": {}
 }
